--- a/P009098.opf/meta.yml
+++ b/P009098.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009098
+id: P009098
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W21864
   title: དུས་རབས་ཉེར་གཅིག་པའི་སྙིང་གཏམ།
-  volume: ''
   author: ''
+  volumes: {}
