--- a/P009098.opf/meta.yml
+++ b/P009098.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W21864
   title: དུས་རབས་ཉེར་གཅིག་པའི་སྙིང་གཏམ།
   author: ''
-  volumes: {}
+  volumes:
+    1c853a324fe647e7b7509f4f779446e3:
+      image_group_id: I1KG22958
+      title: ''
+      volume_number: 1
+      total_pages: 192
