--- a/P009098.opf/layers/v001/Pagination.yml
+++ b/P009098.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 36424432579d4bd5944801a2c42247ed
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2f5e3286caa147f6887918240ca50d28:
