--- a/P009098.opf/meta.yml
+++ b/P009098.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009098
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:22:50.531724
 source_metadata:
   id: bdr:W21864
   title: དུས་རབས་ཉེར་གཅིག་པའི་སྙིང་གཏམ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 192
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
